CREATE SEQUENCE guest_seq START WITH 1 INCREMENT BY 1;

CREATE TABLE GUEST (
    ID BIGINT PRIMARY KEY,
    NAME VARCHAR(255) NOT NULL,
    IP VARCHAR(255) NOT NULL,
    SCORE INT NOT NULL
);