@startuml
entity "User" as user {
  * id : LONG
  --
  name : VARCHAR(45)
  email : VARCHAR(45)
  password : VARCHAR(45)
}

entity "Quiz" as quiz {
  * id : LONG
  --
  code : VARCHAR(45)
  title : VARCHAR(45)
  is_done : BOOLEAN
  user_id : LONG
}

entity "Question" as question {
  * id : LONG
  --
  quiz_id : LONG
  description : VARCHAR(45)
}

entity "Option" as option {
  * id : LONG
  --
  question_id : LONG
  description : VARCHAR(45)
  is_right : BOOLEAN
}

entity "Guest" as guest {
  * id : LONG
  --
  name : VARCHAR(45)
  ip : VARCHAR(45)
  score : VARCHAR(45)
}

entity "QuizGuest" as quiz_guest {
  * quiz_id : LONG
  * guest_id : LONG
}

user ||--o{ quiz : "owns"
quiz ||--o{ question : "contains"
question ||--o{ option : "has"
quiz ||--o{ quiz_guest : "includes"
guest ||--o{ quiz_guest : ""
@enduml
